# formalML

./: .gitignore  CLAUDE.md  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
.claude/: launch.json  settings.json
.claude/hooks/: preview-before-commit.sh
docs/: formalml-citations-audit.xlsx  formalml-content-metrics.xlsx
docs/plans/: 2026-03-15-formalml-site.md  cross-site-audit-report.md  deferred-reciprocals.md  formalml-barcodes-bottleneck-handoff.md  formalml-bayesian-neural-networks-handoff-brief.md  formalml-bayesian-neural-networks-implementation-starter.md  formalml-bayesian-neural-networks-interactive-viz-starter.md  formalml-cech-complexes-handoff-brief.md  formalml-conformal-prediction-handoff-brief.md  formalml-consolidated-strategic-planning-document.md  formalml-dark-mode-brief.md  formalml-density-ratio-estimation-handoff-brief.md  formalml-expander-graphs-handoff-brief.md  formalml-five-forward-topics-planning-brief.md  formalml-graph-laplacians-handoff-brief.md  formalml-handoff-brief-v1.md  formalml-handoff-reference.md  formalml-local-regression-handoff-brief.md  formalml-mapper-algorithm-handoff-brief.md  formalml-message-passing-handoff-brief.md  formalml-natural-transformations-handoff-brief.md  formalml-prediction-intervals-handoff-brief.md  formalml-quantile-regression-handoff-brief.md  formalml-random-walks-handoff-brief.md  formalml-rate-distortion-handoff-brief.md  formalml-readme-and-paths-brief.md  formalml-riemann-manifold-hmc-starter-prompt.md  formalml-satellite-topics-planning-brief.md
docs/plans/audit-output/: formalcalculus-references.json  formalml-references.json  formalstatistics-references.json
docs/superpowers/plans/: 2026-03-16-barcodes-bottleneck.md
drafts/: persistent-homology.mdx  simplicial-complexes.mdx
drafts/notebooks/: statistical-tda.ipynb
notebooks/bayesian-neural-networks/: 01_bayesian_neural_networks.html  01_bayesian_neural_networks.ipynb  precompute_viz_data.py  pyproject.toml
notebooks/conformal-prediction/: 01_conformal_prediction.html  01_conformal_prediction.ipynb  pyproject.toml
notebooks/density-ratio-estimation/: precompute_gan_discriminator.py  precompute_neural_dre.py
notebooks/generalization-bounds/: 01_generalization_bounds.ipynb  README.md  precompute_margin_bound.py  precompute_vacuousness.py  pyproject.toml
notebooks/high-dimensional-regression/: 01_high_dimensional_regression.html  01_high_dimensional_regression.ipynb  pyproject.toml
notebooks/meta-learning/: precompute_inner_loop_sens.py  precompute_maml_loss.py  precompute_np_curves.py  precompute_protonet_training.py  precompute_sample_efficiency.py
notebooks/minimum-description-length/: 04_minimum_description_length.ipynb
notebooks/mixed-effects/: precompute_prior_informativeness.py  pyproject.toml
notebooks/natural-transformations/: 02_natural_transformations.html  02_natural_transformations.ipynb
notebooks/pac-bayes-bounds/: precompute_dziugaite_roy.py  pyproject.toml
notebooks/probabilistic-programming/: precompute_inference_dispatch.py  precompute_neals_funnel.py  pyproject.toml
notebooks/quantile-regression/: 01_quantile_regression.html  01_quantile_regression.ipynb  pyproject.toml
notebooks/random-walks/: 02_random_walks.html  02_random_walks.ipynb
notebooks/sequential-monte-carlo/: precompute_lgcp.py
notebooks/sparse-bayesian-priors/: precompute_diabetes.py  precompute_synthetic_high_dim.py  precompute_vbms_escalation.py
notebooks/stacking-and-predictive-ensembles/: serialize_for_viz.py
notebooks/stochastic-gradient-mcmc/: precompute_head_to_head.py
notebooks/uncertainty-quantification/: precompute_ensemble.py
notebooks/vc-dimension/: precompute_ftsl.py  precompute_money_shot.py  precompute_rademacher.py
public/sample-data/bayesian-neural-networks/: calibration.json
public/sample-data/density-ratio-estimation/: gan_discriminator.json  neural_dre.json
public/sample-data/generalization-bounds/: margin_bound.json  vacuousness.json
public/sample-data/meta-learning/: inner_loop_sens.json  protonet_training.json
public/sample-data/pac-bayes-bounds/: dziugaite_roy.json
public/sample-data/probabilistic-programming/: inference_dispatch.json  neals_funnel.json
scripts/: audit-cross-site-links.mjs  extract-double-descent-figures.py
src/: content.config.ts
src/data/: cech-persistence-data.ts  clustering-data.ts  convergence-data.ts  curriculum-graph.json  curriculum.ts  extreme-value-theory.ts  gaussian-processes-data.ts  kernel-pca-data.ts  mapper-filter-data.ts  mapper-financial-data.ts  mapper-pipeline-data.ts  mapper-sensitivity-data.ts  pca-scree-data.ts  robust-pca-data.ts  spectral-clustering-data.ts  statistical-depth.ts  statistical-tda-data.ts  svd-eckart-young-data.ts  svd-image-data.ts  tensor-decompositions-data.ts
src/layouts/: BaseLayout.astro  TopicLayout.astro
src/lib/: synthesizeCrossSiteNodes.ts  validateConnections.ts
src/pages/: about.astro  index.astro  paths.astro
src/styles/: global.css
(+564 files in other folders)
