[project]
name = "bayesian-neural-networks"
version = "0.1.0"
description = "Bayesian neural networks notebook for formalML T5 (Laplace, MC-dropout, deep ensembles, SGLD/SGHMC, calibration, NNGP/NTK sidebar)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core scientific stack — used in every section
    "numpy>=2.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",

    # PyTorch — §§1, 3–7 training loops, Hessian, SGLD/SGHMC, NNGP forward passes
    # CLAUDE.md "Code-example language policy" allows torch for this topic
    "torch>=2.4",

    # Notebook execution
    "ipykernel>=6.29",
    "jupyter>=1.1",
]
