[project]
name = "bayesian-neural-networks"
version = "0.1.0"
description = "Bayesian neural networks notebook for formalML T5 (Laplace, MC-dropout, deep ensembles, SGLD/SGHMC, calibration, NNGP/NTK sidebar)"
readme = "README.md"
requires-python = ">=3.12"
# Use ~= (compatible-release) pins so patch-level updates land automatically
# but minor/major bumps need explicit opt-in. Keeps the JSON fixtures emitted
# by precompute_viz_data.py reproducible across environments without freezing
# us at a specific patch version.
dependencies = [
    # Core scientific stack — used in every section
    "numpy~=2.4",
    "scipy~=1.17",
    "scikit-learn~=1.8",
    "matplotlib~=3.10",

    # PyTorch — §§1, 3–7 training loops, Hessian, SGLD/SGHMC, NNGP forward passes
    # CLAUDE.md "Code-example language policy" allows torch for this topic
    "torch~=2.11",

    # Notebook execution
    "ipykernel~=6.29",
    "jupyter~=1.1",
]
