[project]
name = "generalization-bounds-notebook"
version = "0.1.0"
description = "Companion notebook for the formalML Generalization Bounds topic."
requires-python = ">=3.11"
dependencies = [
    "numpy~=2.4",
    "scipy~=1.17",
    "scikit-learn~=1.8",
    "matplotlib~=3.10",
    "jupyter~=1.1",
    "openpyxl~=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
