[project]
name = "high-dimensional-regression"
version = "0.1.0"
description = "High-dimensional regression notebook for formalML T2 (Lasso, Ridge, ElasticNet, regularization paths, sparsity in p ≫ n)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel~=7.2.0",
    "jupyter~=1.1.1",
    "matplotlib~=3.10.9",
    "numpy~=2.4.4",
    "scikit-learn~=1.6.1",
    "scipy~=1.17.1",
]
