[project]
name = "mixed-effects"
version = "0.1.0"
description = "Mixed-effects models notebook for formalML T5 (random effects, REML/MLE via statsmodels, Bayesian hierarchies via PyMC)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.21.0,<1.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.2.0",
    "pymc>=5.20.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.4",
]
