[project]
name = "pac-bayes-bounds-notebook"
version = "0.1.0"
description = "Notebook environment for formalML's pac-bayes-bounds topic"
requires-python = ">=3.11"
dependencies = [
  "numpy~=1.26",
  "scipy~=1.11",
  "scikit-learn~=1.5",
  "matplotlib~=3.8",
  "jupyter~=1.0",
  "liac-arff~=2.5",
]
