[project]
name = "probabilistic-programming"
version = "0.1.0"
description = "Probabilistic programming notebook for formalML T5 (PPL semantics, NumPyro + PyMC tour, HMC/NUTS, posterior diagnostics)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.21.0,<1.0",
    "ipykernel>=7.2.0",
    "jax>=0.7.0,<0.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "numpyro>=0.20.0",
    "pymc>=5.20.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
